# Basketball-Tracking-and-Score-Evaluation

./: LICENSE  README.md
Projet/: KFilter.h  Keyframe.cpp  Line.h  Video.cpp  Video.h  Zone.h  parabola_main
input/model/: ball.dae
input/tracking/: basket_detection_test.txt  long_throws.txt  long_throws_test.txt  separation.txt  walls_detection.txt
input/zones/: BigBoxR.txt  BoxL.txt  BoxR.txt
input/zones/BasketBox/: BasketBoxL.txt  BasketBoxR.txt  Basket_Box_L.mtl
input/zones/BigBox/: BigBoxL.txt  BigBoxR.txt
output/DAE_files/: 4path.dae  4steps.dae  K_Filter.dae  K_Line.dae  K_Parabola.dae  K_R_Line.dae  K_vid.dae  Line.dae  R_K_Parabola.dae  R_Line.dae  R_Parabola.dae  Sample1.dae  Sample1_All.dae  all_kalman.dae  ba.dae  parabolaparabola.dae  sample0.dae  sample10.dae  sample11.dae  sample12.dae  sample13.dae  sample14.dae  sample15.dae  sample16.dae  sample17.dae  sample18.dae  sample19.dae  sample2.dae  sample20.dae  sample21.dae  sample22.dae  sample23.dae  sample24.dae  sample25.dae  sample26.dae  sample27.dae  sample28.dae  sample29.dae  sample3.dae  sample30.dae  (+23 more)
output/DAE_files/line/: kalman1_line_r.dae  kalman2.dae  line_r.dae
output/DAE_files/md_samples/: sample0.dae  sample1.dae  sample10.dae  sample11.dae  sample12.dae  sample13.dae  sample14.dae  sample15.dae  sample16.dae  sample17.dae  sample18.dae  sample19.dae  sample2.dae  (+34 more)
output/TXT_files/: kalman.txt  line.txt  separateDist.txt
project/: CMakeLists.txt  Functions.cpp  Functions.h  KFilter.cpp  Keyframe.h  Line.cpp  Parabola.cpp  Parabola.h  Vertex.cpp  Vertex.h  Zone.cpp  main.cpp
(+60 files in other folders)
